--- a/src/styles/components/_headerFooter.scss
+++ b/src/styles/components/_headerFooter.scss
@@ -3,6 +3,7 @@ footer {
   z-index: 1;
   position: sticky;
   top: 0;
+  height: 125px;
   // box-shadow: $boxShadow;
   @include flex(row, space-between, center);
   padding: $paddingContainerLarge;
@@ -39,9 +40,12 @@ footer:before {
   box-shadow: $boxShadow;
   position: absolute;
   height: 100%;
-  width: 98.8vw;
+  // width: 98.8vw;
+  width: 100dvw;
+  // overflow: hidden;
   left: 50%;
   top: 0;
+  background-color: white;
   transform: translate(-50%, 0px);
   z-index: -1;
   // overflow: hidden;
