--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -21,6 +21,7 @@
 }
 
 main {
+  margin-top: 85vh;
   > div > h2 {
     margin-bottom: $marginMedium;
   }
